stop gap for form-messages

--- a/src/utilities/forms.less
+++ b/src/utilities/forms.less
@@ -245,3 +245,13 @@
         
     }
 }
+
+.form-message {
+    .text-danger();
+}
+
+.form-message-link {
+    .text-link();
+    float: right;
+    cursor: pointer;
+}
